--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -55,6 +55,8 @@ ie/backgroundsize.min.htc: ie/backgroundsize.min-d8e1a903131399c37a3b3869fad25fa
 ie/backgroundsize/index.min.htc: ie/backgroundsize.min-d8e1a903131399c37a3b3869fad25faf.htc
 FontAwesome.otf: FontAwesome-32f043dec1954533e5e731cbd725573f.otf
 FontAwesome/index.otf: FontAwesome-32f043dec1954533e5e731cbd725573f.otf
+application.css: application-af5e8c61bd5b13b2528248e40e665feb.css
+application/index.css: application-af5e8c61bd5b13b2528248e40e665feb.css
 fontawesome-webfont.eot: fontawesome-webfont-2a1eb00d733f7b3abcbc26e365801d00.eot
 fontawesome-webfont/index.eot: fontawesome-webfont-2a1eb00d733f7b3abcbc26e365801d00.eot
 fontawesome-webfont.svg: fontawesome-webfont-e568997ef41afd4cec528c50ed483868.svg
