add ajax user search

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,6 +1,6 @@
 ---
-Logo.png: Logo-27453d8ce3d48467f76a97be0cbf7475.png
-Logo/index.png: Logo-27453d8ce3d48467f76a97be0cbf7475.png
+amsterdam.jpg: amsterdam-3c4b22e20e544649cf1e006039b8b434.jpg
+amsterdam/index.jpg: amsterdam-3c4b22e20e544649cf1e006039b8b434.jpg
 avatar.jpg: avatar-d760b39ef58abb70f59aaadf07b649a6.jpg
 avatar/index.jpg: avatar-d760b39ef58abb70f59aaadf07b649a6.jpg
 avatar1.jpeg: avatar1-7500eaaf6c3a345762c71ddaaced8157.jpeg
@@ -11,6 +11,14 @@ brian.jpeg: brian-8756ddf734b2f3fb79d7b9d14f7a383d.jpeg
 brian/index.jpeg: brian-8756ddf734b2f3fb79d7b9d14f7a383d.jpeg
 brian.jpg: brian-9dae345364820c6730f58ad8841b6e84.jpg
 brian/index.jpg: brian-9dae345364820c6730f58ad8841b6e84.jpg
+cape_town.jpg: cape_town-95368a6ff6b690351f868927027fd50c.jpg
+cape_town/index.jpg: cape_town-95368a6ff6b690351f868927027fd50c.jpg
+cities.gif: cities-53b02a4acfe295428439d96087d4669d.gif
+cities/index.gif: cities-53b02a4acfe295428439d96087d4669d.gif
+cities2.gif: cities2-c42d1f58cf52a16a8fc740cb699c33fd.gif
+cities2/index.gif: cities2-c42d1f58cf52a16a8fc740cb699c33fd.gif
+fly.gif: fly-d3657c40aed2ffb4a7838ea423b381ac.gif
+fly/index.gif: fly-d3657c40aed2ffb4a7838ea423b381ac.gif
 fulls/01.jpg: fulls/01-8fe00c00aac863042ef59d73e07dc953.jpg
 fulls/01/index.jpg: fulls/01-8fe00c00aac863042ef59d73e07dc953.jpg
 fulls/02.jpg: fulls/02-3a8c12740442105f6a2f2634c82f5bfb.jpg
@@ -29,10 +37,22 @@ joel.jpg: joel-fe54ebeef7b10b9a935a4fc8fcfa686b.jpg
 joel/index.jpg: joel-fe54ebeef7b10b9a935a4fc8fcfa686b.jpg
 lisa.jpeg: lisa-09b8a6491d523cb142a824320e7da34c.jpeg
 lisa/index.jpeg: lisa-09b8a6491d523cb142a824320e7da34c.jpeg
+logo.jpg: logo-ce84f6d31ff1543522a62441e8f681ec.jpg
+logo/index.jpg: logo-ce84f6d31ff1543522a62441e8f681ec.jpg
+logo.png: logo-c99ea12a90864cd228a5907fc7319e46.png
+logo/index.png: logo-c99ea12a90864cd228a5907fc7319e46.png
+logo2.jpg: logo2-5d4a7c69aa6216b086a9a41724974034.jpg
+logo2/index.jpg: logo2-5d4a7c69aa6216b086a9a41724974034.jpg
+london.jpg: london-5595daccb6ed9fda50259e36b67b8c64.jpg
+london/index.jpg: london-5595daccb6ed9fda50259e36b67b8c64.jpg
+nyc.jpg: nyc-244663ae55c95db8234820170ed3b3e3.jpg
+nyc/index.jpg: nyc-244663ae55c95db8234820170ed3b3e3.jpg
 overla.png: overla-c663a810c2779b17b0a1d816c4608129.png
 overla/index.png: overla-c663a810c2779b17b0a1d816c4608129.png
 paris.jpg: paris-d79b27659e2326515824bcaf42070cc3.jpg
 paris/index.jpg: paris-d79b27659e2326515824bcaf42070cc3.jpg
+paris2.jpg: paris2-2e0ec8ca1951693acbf93292940ceee8.jpg
+paris2/index.jpg: paris2-2e0ec8ca1951693acbf93292940ceee8.jpg
 rails.png: rails-71e944d9b39043eba50b77788c0d767f.png
 rails/index.png: rails-71e944d9b39043eba50b77788c0d767f.png
 thumbs/01.jpg: thumbs/01-5b26ceb0a1215fad59e1d77557020fc3.jpg
@@ -47,16 +67,18 @@ thumbs/05.jpg: thumbs/05-10cb7f6bc4dd9bb9953442f51d5d1352.jpg
 thumbs/05/index.jpg: thumbs/05-10cb7f6bc4dd9bb9953442f51d5d1352.jpg
 thumbs/06.jpg: thumbs/06-dfb29c29b5ebb7a3ad2a4f2ebd0b799f.jpg
 thumbs/06/index.jpg: thumbs/06-dfb29c29b5ebb7a3ad2a4f2ebd0b799f.jpg
-application.js: application-b7e162ff1c55b2aa7c4f81011457f2a3.js
-application/index.js: application-b7e162ff1c55b2aa7c4f81011457f2a3.js
+tokyo.gif: tokyo-4a4a30628922db80577d77b8689098a0.gif
+tokyo/index.gif: tokyo-4a4a30628922db80577d77b8689098a0.gif
+application.js: application-7bd99b8e150f6cd8351ad054031e0f10.js
+application/index.js: application-7bd99b8e150f6cd8351ad054031e0f10.js
 ie/PIE.htc: ie/PIE-238c32519ae0fef6fb7b626d9265b85b.htc
 ie/PIE/index.htc: ie/PIE-238c32519ae0fef6fb7b626d9265b85b.htc
 ie/backgroundsize.min.htc: ie/backgroundsize.min-d8e1a903131399c37a3b3869fad25faf.htc
 ie/backgroundsize/index.min.htc: ie/backgroundsize.min-d8e1a903131399c37a3b3869fad25faf.htc
 FontAwesome.otf: FontAwesome-32f043dec1954533e5e731cbd725573f.otf
 FontAwesome/index.otf: FontAwesome-32f043dec1954533e5e731cbd725573f.otf
-application.css: application-70762a1a1a2eddb85348fd776811712c.css
-application/index.css: application-70762a1a1a2eddb85348fd776811712c.css
+application.css: application-dbfdbf60ccdd9339f7f5b20a2f469e7b.css
+application/index.css: application-dbfdbf60ccdd9339f7f5b20a2f469e7b.css
 fontawesome-webfont.eot: fontawesome-webfont-2a1eb00d733f7b3abcbc26e365801d00.eot
 fontawesome-webfont/index.eot: fontawesome-webfont-2a1eb00d733f7b3abcbc26e365801d00.eot
 fontawesome-webfont.woff: fontawesome-webfont-f2a9004d897733ee518fb3d48f0fbb53.woff
