omg...FB auth?? :O

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,6 +1,6 @@
 ---
-amsterdam.jpg: amsterdam-3c4b22e20e544649cf1e006039b8b434.jpg
-amsterdam/index.jpg: amsterdam-3c4b22e20e544649cf1e006039b8b434.jpg
+amsterdam2.jpg: amsterdam2-892723397c9fb84240d0077b6a39e8aa.jpg
+amsterdam2/index.jpg: amsterdam2-892723397c9fb84240d0077b6a39e8aa.jpg
 avatar.jpg: avatar-d760b39ef58abb70f59aaadf07b649a6.jpg
 avatar/index.jpg: avatar-d760b39ef58abb70f59aaadf07b649a6.jpg
 avatar1.jpeg: avatar1-7500eaaf6c3a345762c71ddaaced8157.jpeg
@@ -45,8 +45,8 @@ logo2.jpg: logo2-5d4a7c69aa6216b086a9a41724974034.jpg
 logo2/index.jpg: logo2-5d4a7c69aa6216b086a9a41724974034.jpg
 london.jpg: london-5595daccb6ed9fda50259e36b67b8c64.jpg
 london/index.jpg: london-5595daccb6ed9fda50259e36b67b8c64.jpg
-nyc.jpg: nyc-244663ae55c95db8234820170ed3b3e3.jpg
-nyc/index.jpg: nyc-244663ae55c95db8234820170ed3b3e3.jpg
+nyc2.jpg: nyc2-028db8688dfde36087863b7df0c7961f.jpg
+nyc2/index.jpg: nyc2-028db8688dfde36087863b7df0c7961f.jpg
 overla.png: overla-c663a810c2779b17b0a1d816c4608129.png
 overla/index.png: overla-c663a810c2779b17b0a1d816c4608129.png
 paris.jpg: paris-d79b27659e2326515824bcaf42070cc3.jpg
@@ -77,8 +77,8 @@ ie/backgroundsize.min.htc: ie/backgroundsize.min-d8e1a903131399c37a3b3869fad25fa
 ie/backgroundsize/index.min.htc: ie/backgroundsize.min-d8e1a903131399c37a3b3869fad25faf.htc
 FontAwesome.otf: FontAwesome-32f043dec1954533e5e731cbd725573f.otf
 FontAwesome/index.otf: FontAwesome-32f043dec1954533e5e731cbd725573f.otf
-application.css: application-f5ba3da078d946278b7f087a9eaf69b0.css
-application/index.css: application-f5ba3da078d946278b7f087a9eaf69b0.css
+application.css: application-bab770d6e33989eafbdf28ca81a2729b.css
+application/index.css: application-bab770d6e33989eafbdf28ca81a2729b.css
 fontawesome-webfont.eot: fontawesome-webfont-2a1eb00d733f7b3abcbc26e365801d00.eot
 fontawesome-webfont/index.eot: fontawesome-webfont-2a1eb00d733f7b3abcbc26e365801d00.eot
 fontawesome-webfont.woff: fontawesome-webfont-f2a9004d897733ee518fb3d48f0fbb53.woff
