change landing page

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,10 +1,16 @@
 ---
 amsterdam2.jpg: amsterdam2-892723397c9fb84240d0077b6a39e8aa.jpg
 amsterdam2/index.jpg: amsterdam2-892723397c9fb84240d0077b6a39e8aa.jpg
+arrow.svg: arrow-d1e588273acb9c57a66f618a8b6ffb65.svg
+arrow/index.svg: arrow-d1e588273acb9c57a66f618a8b6ffb65.svg
+autostop.jpeg: autostop-09d1100bb9ade7e01fe4b761b6676cde.jpeg
+autostop/index.jpeg: autostop-09d1100bb9ade7e01fe4b761b6676cde.jpeg
 avatar.jpg: avatar-d760b39ef58abb70f59aaadf07b649a6.jpg
 avatar/index.jpg: avatar-d760b39ef58abb70f59aaadf07b649a6.jpg
 avatar1.jpeg: avatar1-7500eaaf6c3a345762c71ddaaced8157.jpeg
 avatar1/index.jpeg: avatar1-7500eaaf6c3a345762c71ddaaced8157.jpeg
+bars.svg: bars-b241f54f4023946c967460204ee918b5.svg
+bars/index.svg: bars-b241f54f4023946c967460204ee918b5.svg
 bg.jpg: bg-6668c38cc7b080f5e01445c558ec2466.jpg
 bg/index.jpg: bg-6668c38cc7b080f5e01445c558ec2466.jpg
 brian.jpeg: brian-8756ddf734b2f3fb79d7b9d14f7a383d.jpeg
@@ -17,6 +23,10 @@ cities.gif: cities-53b02a4acfe295428439d96087d4669d.gif
 cities/index.gif: cities-53b02a4acfe295428439d96087d4669d.gif
 cities2.gif: cities2-c42d1f58cf52a16a8fc740cb699c33fd.gif
 cities2/index.gif: cities2-c42d1f58cf52a16a8fc740cb699c33fd.gif
+close.svg: close-2ac9e64f88b6f60f446622cb208ff013.svg
+close/index.svg: close-2ac9e64f88b6f60f446622cb208ff013.svg
+contact.jpeg: contact-0541b192630d35ef8314e55ddc799192.jpeg
+contact/index.jpeg: contact-0541b192630d35ef8314e55ddc799192.jpeg
 favicon-32x32.ico: favicon-32x32-965f4e1fb704b5dd8dc4216f0d7988c7.ico
 favicon-32x32/index.ico: favicon-32x32-965f4e1fb704b5dd8dc4216f0d7988c7.ico
 favicon.ico: favicon-fc4603dee2fd5de07d4a5cc3b2af7062.ico
@@ -25,6 +35,8 @@ favicon.png: favicon-beaf040aa87117096547d2e39462abc0.png
 favicon/index.png: favicon-beaf040aa87117096547d2e39462abc0.png
 fly.gif: fly-d3657c40aed2ffb4a7838ea423b381ac.gif
 fly/index.gif: fly-d3657c40aed2ffb4a7838ea423b381ac.gif
+friends.jpeg: friends-354f89fc8d1fc6b02c7aaf2008523b8a.jpeg
+friends/index.jpeg: friends-354f89fc8d1fc6b02c7aaf2008523b8a.jpeg
 fulls/01.jpg: fulls/01-8fe00c00aac863042ef59d73e07dc953.jpg
 fulls/01/index.jpg: fulls/01-8fe00c00aac863042ef59d73e07dc953.jpg
 fulls/02.jpg: fulls/02-3a8c12740442105f6a2f2634c82f5bfb.jpg
@@ -37,6 +49,8 @@ fulls/05.jpg: fulls/05-40db1f0de91f8e906adae82e216c6168.jpg
 fulls/05/index.jpg: fulls/05-40db1f0de91f8e906adae82e216c6168.jpg
 fulls/06.jpg: fulls/06-fc169434127c37ed8a76a4f0bd43cdb7.jpg
 fulls/06/index.jpg: fulls/06-fc169434127c37ed8a76a4f0bd43cdb7.jpg
+hawai.jpeg: hawai-55ca48f84bc8e37193ccad9ec3292147.jpeg
+hawai/index.jpeg: hawai-55ca48f84bc8e37193ccad9ec3292147.jpeg
 jcy.jpg: jcy-9080441381b3806a4135cf6816a23982.jpg
 jcy/index.jpg: jcy-9080441381b3806a4135cf6816a23982.jpg
 joel.jpg: joel-fe54ebeef7b10b9a935a4fc8fcfa686b.jpg
@@ -61,6 +75,8 @@ paris2.jpg: paris2-2e0ec8ca1951693acbf93292940ceee8.jpg
 paris2/index.jpg: paris2-2e0ec8ca1951693acbf93292940ceee8.jpg
 rails.png: rails-71e944d9b39043eba50b77788c0d767f.png
 rails/index.png: rails-71e944d9b39043eba50b77788c0d767f.png
+ship.jpeg: ship-a6dd1dc704c36727d1caff5f39cb4bfd.jpeg
+ship/index.jpeg: ship-a6dd1dc704c36727d1caff5f39cb4bfd.jpeg
 thumbs/01.jpg: thumbs/01-5b26ceb0a1215fad59e1d77557020fc3.jpg
 thumbs/01/index.jpg: thumbs/01-5b26ceb0a1215fad59e1d77557020fc3.jpg
 thumbs/02.jpg: thumbs/02-ba484d8de19d5efd6435253b18e8f663.jpg
@@ -75,16 +91,22 @@ thumbs/06.jpg: thumbs/06-dfb29c29b5ebb7a3ad2a4f2ebd0b799f.jpg
 thumbs/06/index.jpg: thumbs/06-dfb29c29b5ebb7a3ad2a4f2ebd0b799f.jpg
 tokyo.gif: tokyo-4a4a30628922db80577d77b8689098a0.gif
 tokyo/index.gif: tokyo-4a4a30628922db80577d77b8689098a0.gif
-application.js: application-b092ac46bd4383ddb132970dbc72dd73.js
-application/index.js: application-b092ac46bd4383ddb132970dbc72dd73.js
+traveling.jpeg: traveling-2035de241500d27c28443ef41a86cf1d.jpeg
+traveling/index.jpeg: traveling-2035de241500d27c28443ef41a86cf1d.jpeg
+traveling.png: traveling-418e999cfb7d43202151532658f33d6d.png
+traveling/index.png: traveling-418e999cfb7d43202151532658f33d6d.png
+visiting.jpeg: visiting-861b8b7d4a0904db279ee9f6649d785b.jpeg
+visiting/index.jpeg: visiting-861b8b7d4a0904db279ee9f6649d785b.jpeg
+application.js: application-e8a302693857da1638ecb7a549dcae64.js
+application/index.js: application-e8a302693857da1638ecb7a549dcae64.js
 ie/PIE.htc: ie/PIE-238c32519ae0fef6fb7b626d9265b85b.htc
 ie/PIE/index.htc: ie/PIE-238c32519ae0fef6fb7b626d9265b85b.htc
 ie/backgroundsize.min.htc: ie/backgroundsize.min-d8e1a903131399c37a3b3869fad25faf.htc
 ie/backgroundsize/index.min.htc: ie/backgroundsize.min-d8e1a903131399c37a3b3869fad25faf.htc
 FontAwesome.otf: FontAwesome-32f043dec1954533e5e731cbd725573f.otf
 FontAwesome/index.otf: FontAwesome-32f043dec1954533e5e731cbd725573f.otf
-application.css: application-c937b199ea36bdd0a5666a185fab9351.css
-application/index.css: application-c937b199ea36bdd0a5666a185fab9351.css
+application.css: application-f356e1ba5de2dff54fae7d0abbb5ceba.css
+application/index.css: application-f356e1ba5de2dff54fae7d0abbb5ceba.css
 fontawesome-webfont.eot: fontawesome-webfont-2a1eb00d733f7b3abcbc26e365801d00.eot
 fontawesome-webfont/index.eot: fontawesome-webfont-2a1eb00d733f7b3abcbc26e365801d00.eot
 fontawesome-webfont.woff: fontawesome-webfont-f2a9004d897733ee518fb3d48f0fbb53.woff
