--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -37,6 +37,10 @@ fly.gif: fly-d3657c40aed2ffb4a7838ea423b381ac.gif
 fly/index.gif: fly-d3657c40aed2ffb4a7838ea423b381ac.gif
 friends.jpeg: friends-354f89fc8d1fc6b02c7aaf2008523b8a.jpeg
 friends/index.jpeg: friends-354f89fc8d1fc6b02c7aaf2008523b8a.jpeg
+friends2.jpg: friends2-e0ab37573df595de262181282304f171.jpg
+friends2/index.jpg: friends2-e0ab37573df595de262181282304f171.jpg
+friends3.jpg: friends3-2e765795a7e00d0c2bf2075e36e073fb.jpg
+friends3/index.jpg: friends3-2e765795a7e00d0c2bf2075e36e073fb.jpg
 fulls/01.jpg: fulls/01-8fe00c00aac863042ef59d73e07dc953.jpg
 fulls/01/index.jpg: fulls/01-8fe00c00aac863042ef59d73e07dc953.jpg
 fulls/02.jpg: fulls/02-3a8c12740442105f6a2f2634c82f5bfb.jpg
@@ -105,8 +109,8 @@ ie/backgroundsize.min.htc: ie/backgroundsize.min-d8e1a903131399c37a3b3869fad25fa
 ie/backgroundsize/index.min.htc: ie/backgroundsize.min-d8e1a903131399c37a3b3869fad25faf.htc
 FontAwesome.otf: FontAwesome-32f043dec1954533e5e731cbd725573f.otf
 FontAwesome/index.otf: FontAwesome-32f043dec1954533e5e731cbd725573f.otf
-application.css: application-72924ea587f12f0ef0111a702cb11e5e.css
-application/index.css: application-72924ea587f12f0ef0111a702cb11e5e.css
+application.css: application-2db28ef1eeaa12c3040ef76c6d2a93c0.css
+application/index.css: application-2db28ef1eeaa12c3040ef76c6d2a93c0.css
 fontawesome-webfont.eot: fontawesome-webfont-2a1eb00d733f7b3abcbc26e365801d00.eot
 fontawesome-webfont/index.eot: fontawesome-webfont-2a1eb00d733f7b3abcbc26e365801d00.eot
 fontawesome-webfont.woff: fontawesome-webfont-f2a9004d897733ee518fb3d48f0fbb53.woff
