overhaul friends invite system/notifications

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,6 +1,10 @@
 ---
 amsterdam2.jpg: amsterdam2-892723397c9fb84240d0077b6a39e8aa.jpg
 amsterdam2/index.jpg: amsterdam2-892723397c9fb84240d0077b6a39e8aa.jpg
+apostll_logo_21024x1024.jpg: apostll_logo_21024x1024-dafbf05382111a170e4037b30d2fefaf.jpg
+apostll_logo_21024x1024/index.jpg: apostll_logo_21024x1024-dafbf05382111a170e4037b30d2fefaf.jpg
+apostll_logo_21024x1024.png: apostll_logo_21024x1024-410b6e7aadd4b66b03cf7c4bccabe607.png
+apostll_logo_21024x1024/index.png: apostll_logo_21024x1024-410b6e7aadd4b66b03cf7c4bccabe607.png
 arrow.svg: arrow-d1e588273acb9c57a66f618a8b6ffb65.svg
 arrow/index.svg: arrow-d1e588273acb9c57a66f618a8b6ffb65.svg
 autostop.jpeg: autostop-09d1100bb9ade7e01fe4b761b6676cde.jpeg
@@ -101,16 +105,16 @@ traveling.png: traveling-418e999cfb7d43202151532658f33d6d.png
 traveling/index.png: traveling-418e999cfb7d43202151532658f33d6d.png
 visiting.jpeg: visiting-861b8b7d4a0904db279ee9f6649d785b.jpeg
 visiting/index.jpeg: visiting-861b8b7d4a0904db279ee9f6649d785b.jpeg
-application.js: application-e8a302693857da1638ecb7a549dcae64.js
-application/index.js: application-e8a302693857da1638ecb7a549dcae64.js
+application.js: application-8d9f62284cc9dd021a12a463ffad1841.js
+application/index.js: application-8d9f62284cc9dd021a12a463ffad1841.js
 ie/PIE.htc: ie/PIE-238c32519ae0fef6fb7b626d9265b85b.htc
 ie/PIE/index.htc: ie/PIE-238c32519ae0fef6fb7b626d9265b85b.htc
 ie/backgroundsize.min.htc: ie/backgroundsize.min-d8e1a903131399c37a3b3869fad25faf.htc
 ie/backgroundsize/index.min.htc: ie/backgroundsize.min-d8e1a903131399c37a3b3869fad25faf.htc
 FontAwesome.otf: FontAwesome-32f043dec1954533e5e731cbd725573f.otf
 FontAwesome/index.otf: FontAwesome-32f043dec1954533e5e731cbd725573f.otf
-application.css: application-0756d910ce50cf658471943f528c0bf7.css
-application/index.css: application-0756d910ce50cf658471943f528c0bf7.css
+application.css: application-cfbbbf3fe1c833963c50950c4893eb44.css
+application/index.css: application-cfbbbf3fe1c833963c50950c4893eb44.css
 fontawesome-webfont.eot: fontawesome-webfont-2a1eb00d733f7b3abcbc26e365801d00.eot
 fontawesome-webfont/index.eot: fontawesome-webfont-2a1eb00d733f7b3abcbc26e365801d00.eot
 fontawesome-webfont.woff: fontawesome-webfont-f2a9004d897733ee518fb3d48f0fbb53.woff
