--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,4 +1,6 @@
 ---
+Logo.png: Logo-c99ea12a90864cd228a5907fc7319e46.png
+Logo/index.png: Logo-c99ea12a90864cd228a5907fc7319e46.png
 amsterdam2.jpg: amsterdam2-892723397c9fb84240d0077b6a39e8aa.jpg
 amsterdam2/index.jpg: amsterdam2-892723397c9fb84240d0077b6a39e8aa.jpg
 apostll_logo_21024x1024.jpg: apostll_logo_21024x1024-dafbf05382111a170e4037b30d2fefaf.jpg
@@ -67,8 +69,6 @@ lisa.jpeg: lisa-09b8a6491d523cb142a824320e7da34c.jpeg
 lisa/index.jpeg: lisa-09b8a6491d523cb142a824320e7da34c.jpeg
 logo.jpg: logo-ce84f6d31ff1543522a62441e8f681ec.jpg
 logo/index.jpg: logo-ce84f6d31ff1543522a62441e8f681ec.jpg
-logo.png: logo-c99ea12a90864cd228a5907fc7319e46.png
-logo/index.png: logo-c99ea12a90864cd228a5907fc7319e46.png
 logo2.jpg: logo2-5d4a7c69aa6216b086a9a41724974034.jpg
 logo2/index.jpg: logo2-5d4a7c69aa6216b086a9a41724974034.jpg
 london.jpg: london-5595daccb6ed9fda50259e36b67b8c64.jpg
