vendor compiled assets

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -129,6 +129,8 @@ traveling.png: traveling-418e999cfb7d43202151532658f33d6d.png
 traveling/index.png: traveling-418e999cfb7d43202151532658f33d6d.png
 visiting.jpeg: visiting-861b8b7d4a0904db279ee9f6649d785b.jpeg
 visiting/index.jpeg: visiting-861b8b7d4a0904db279ee9f6649d785b.jpeg
+woman.jpg: woman-77aac16161aebb7856f0730d9795e763.jpg
+woman/index.jpg: woman-77aac16161aebb7856f0730d9795e763.jpg
 zoya_logo.png: zoya_logo-9792f68eaa0b5de4b000ed4efff2a716.png
 zoya_logo/index.png: zoya_logo-9792f68eaa0b5de4b000ed4efff2a716.png
 application.js: application-ad9a02783c2d84f3203e1d2e2a3985db.js
