vendor compiled assets

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -29,6 +29,8 @@ brian.jpeg: brian-8756ddf734b2f3fb79d7b9d14f7a383d.jpeg
 brian/index.jpeg: brian-8756ddf734b2f3fb79d7b9d14f7a383d.jpeg
 brian.jpg: brian-9dae345364820c6730f58ad8841b6e84.jpg
 brian/index.jpg: brian-9dae345364820c6730f58ad8841b6e84.jpg
+cab.jpeg: cab-61a950d7b2d0263099b3b6eaf9c1aabf.jpeg
+cab/index.jpeg: cab-61a950d7b2d0263099b3b6eaf9c1aabf.jpeg
 cape_town.jpg: cape_town-95368a6ff6b690351f868927027fd50c.jpg
 cape_town/index.jpg: cape_town-95368a6ff6b690351f868927027fd50c.jpg
 chauffeur.jpeg: chauffeur-113988d05e7850cd7ff410889403e7ca.jpeg
