--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,12 +1,12 @@
 ---
-FB-f-Logo__blue_512.png: FB-f-Logo__blue_512-cb94cc9fec1727f2aa34502a2cbc4fe5.png
-FB-f-Logo__blue_512/index.png: FB-f-Logo__blue_512-cb94cc9fec1727f2aa34502a2cbc4fe5.png
-FB-f-Logo__white_1024.png: FB-f-Logo__white_1024-644dd9ec7e961894b902205312770c3f.png
-FB-f-Logo__white_1024/index.png: FB-f-Logo__white_1024-644dd9ec7e961894b902205312770c3f.png
-Facebook.png: Facebook-9999735d25b912d0deb09ce102277a2a.png
-Facebook/index.png: Facebook-9999735d25b912d0deb09ce102277a2a.png
+IMG_5894.jpeg: IMG_5894-6f9fab47fe9f0b75c7a590668ee82499.jpeg
+IMG_5894/index.jpeg: IMG_5894-6f9fab47fe9f0b75c7a590668ee82499.jpeg
 Logo.png: Logo-c99ea12a90864cd228a5907fc7319e46.png
 Logo/index.png: Logo-c99ea12a90864cd228a5907fc7319e46.png
+_MG_8957.jpg: _MG_8957-5b77ee46658b52a1a47e975dffd1b01f.jpg
+_MG_8957/index.jpg: _MG_8957-5b77ee46658b52a1a47e975dffd1b01f.jpg
+_MG_8970.jpg: _MG_8970-4b2f3ce28f983a387908091065c5c0c9.jpg
+_MG_8970/index.jpg: _MG_8970-4b2f3ce28f983a387908091065c5c0c9.jpg
 amsterdam2.jpg: amsterdam2-892723397c9fb84240d0077b6a39e8aa.jpg
 amsterdam2/index.jpg: amsterdam2-892723397c9fb84240d0077b6a39e8aa.jpg
 apostll_logo_21024x1024.jpg: apostll_logo_21024x1024-dafbf05382111a170e4037b30d2fefaf.jpg
@@ -29,12 +29,8 @@ brian.jpeg: brian-8756ddf734b2f3fb79d7b9d14f7a383d.jpeg
 brian/index.jpeg: brian-8756ddf734b2f3fb79d7b9d14f7a383d.jpeg
 brian.jpg: brian-9dae345364820c6730f58ad8841b6e84.jpg
 brian/index.jpg: brian-9dae345364820c6730f58ad8841b6e84.jpg
-cab.jpeg: cab-61a950d7b2d0263099b3b6eaf9c1aabf.jpeg
-cab/index.jpeg: cab-61a950d7b2d0263099b3b6eaf9c1aabf.jpeg
 cape_town.jpg: cape_town-95368a6ff6b690351f868927027fd50c.jpg
 cape_town/index.jpg: cape_town-95368a6ff6b690351f868927027fd50c.jpg
-chauffeur.jpeg: chauffeur-113988d05e7850cd7ff410889403e7ca.jpeg
-chauffeur/index.jpeg: chauffeur-113988d05e7850cd7ff410889403e7ca.jpeg
 cities.gif: cities-53b02a4acfe295428439d96087d4669d.gif
 cities/index.gif: cities-53b02a4acfe295428439d96087d4669d.gif
 cities2.gif: cities2-c42d1f58cf52a16a8fc740cb699c33fd.gif
@@ -43,10 +39,6 @@ close.svg: close-2ac9e64f88b6f60f446622cb208ff013.svg
 close/index.svg: close-2ac9e64f88b6f60f446622cb208ff013.svg
 contact.jpeg: contact-0541b192630d35ef8314e55ddc799192.jpeg
 contact/index.jpeg: contact-0541b192630d35ef8314e55ddc799192.jpeg
-desert.jpg: desert-a946ac8baa2bff66b1955efb8cc6d2fc.jpg
-desert/index.jpg: desert-a946ac8baa2bff66b1955efb8cc6d2fc.jpg
-echangeur.jpg: echangeur-741c970f4db2eea1f7e592aacd193d6b.jpg
-echangeur/index.jpg: echangeur-741c970f4db2eea1f7e592aacd193d6b.jpg
 favicon-32x32.ico: favicon-32x32-965f4e1fb704b5dd8dc4216f0d7988c7.ico
 favicon-32x32/index.ico: favicon-32x32-965f4e1fb704b5dd8dc4216f0d7988c7.ico
 favicon.ico: favicon-fc4603dee2fd5de07d4a5cc3b2af7062.ico
@@ -73,20 +65,12 @@ fulls/05.jpg: fulls/05-40db1f0de91f8e906adae82e216c6168.jpg
 fulls/05/index.jpg: fulls/05-40db1f0de91f8e906adae82e216c6168.jpg
 fulls/06.jpg: fulls/06-fc169434127c37ed8a76a4f0bd43cdb7.jpg
 fulls/06/index.jpg: fulls/06-fc169434127c37ed8a76a4f0bd43cdb7.jpg
-gps.jpg: gps-3569b45d5c2258fa3608585a4f151c39.jpg
-gps/index.jpg: gps-3569b45d5c2258fa3608585a4f151c39.jpg
 hawai.jpeg: hawai-55ca48f84bc8e37193ccad9ec3292147.jpeg
 hawai/index.jpeg: hawai-55ca48f84bc8e37193ccad9ec3292147.jpeg
-hong-kong.jpg: hong-kong-043ae5ce6a010792bbd15a7dc873d890.jpg
-hong-kong/index.jpg: hong-kong-043ae5ce6a010792bbd15a7dc873d890.jpg
-instagram.png: instagram-b06a7b9d88c4ae7e0a0ceabbee4175cb.png
-instagram/index.png: instagram-b06a7b9d88c4ae7e0a0ceabbee4175cb.png
 jcy.jpg: jcy-9080441381b3806a4135cf6816a23982.jpg
 jcy/index.jpg: jcy-9080441381b3806a4135cf6816a23982.jpg
 joel.jpg: joel-fe54ebeef7b10b9a935a4fc8fcfa686b.jpg
 joel/index.jpg: joel-fe54ebeef7b10b9a935a4fc8fcfa686b.jpg
-lady.jpg: lady-bccb8776eb09797f11b985b3bbc3449a.jpg
-lady/index.jpg: lady-bccb8776eb09797f11b985b3bbc3449a.jpg
 lisa.jpeg: lisa-09b8a6491d523cb142a824320e7da34c.jpeg
 lisa/index.jpeg: lisa-09b8a6491d523cb142a824320e7da34c.jpeg
 logo.jpg: logo-ce84f6d31ff1543522a62441e8f681ec.jpg
@@ -95,8 +79,6 @@ logo2.jpg: logo2-5d4a7c69aa6216b086a9a41724974034.jpg
 logo2/index.jpg: logo2-5d4a7c69aa6216b086a9a41724974034.jpg
 london.jpg: london-5595daccb6ed9fda50259e36b67b8c64.jpg
 london/index.jpg: london-5595daccb6ed9fda50259e36b67b8c64.jpg
-mountain.jpg: mountain-5dd21f695234091b6db2857bd4169755.jpg
-mountain/index.jpg: mountain-5dd21f695234091b6db2857bd4169755.jpg
 nyc2.jpg: nyc2-028db8688dfde36087863b7df0c7961f.jpg
 nyc2/index.jpg: nyc2-028db8688dfde36087863b7df0c7961f.jpg
 overla.png: overla-c663a810c2779b17b0a1d816c4608129.png
@@ -109,14 +91,6 @@ rails.png: rails-71e944d9b39043eba50b77788c0d767f.png
 rails/index.png: rails-71e944d9b39043eba50b77788c0d767f.png
 ship.jpeg: ship-a6dd1dc704c36727d1caff5f39cb4bfd.jpeg
 ship/index.jpeg: ship-a6dd1dc704c36727d1caff5f39cb4bfd.jpeg
-streets copy 2.jpg: streets copy 2-1dd5bbbb40497d4a1b93e40b2059d155.jpg
-streets copy 2/index.jpg: streets copy 2-1dd5bbbb40497d4a1b93e40b2059d155.jpg
-streets copy 3.jpg: streets copy 3-87bf9c195c71ca1f82c795ddff592aea.jpg
-streets copy 3/index.jpg: streets copy 3-87bf9c195c71ca1f82c795ddff592aea.jpg
-streets copy.jpg: streets copy-6292c5753442af74fa4324f0f649e30c.jpg
-streets copy/index.jpg: streets copy-6292c5753442af74fa4324f0f649e30c.jpg
-streets.jpg: streets-6292c5753442af74fa4324f0f649e30c.jpg
-streets/index.jpg: streets-6292c5753442af74fa4324f0f649e30c.jpg
 thumbs/01.jpg: thumbs/01-5b26ceb0a1215fad59e1d77557020fc3.jpg
 thumbs/01/index.jpg: thumbs/01-5b26ceb0a1215fad59e1d77557020fc3.jpg
 thumbs/02.jpg: thumbs/02-ba484d8de19d5efd6435253b18e8f663.jpg
@@ -137,12 +111,6 @@ traveling.png: traveling-418e999cfb7d43202151532658f33d6d.png
 traveling/index.png: traveling-418e999cfb7d43202151532658f33d6d.png
 visiting.jpeg: visiting-861b8b7d4a0904db279ee9f6649d785b.jpeg
 visiting/index.jpeg: visiting-861b8b7d4a0904db279ee9f6649d785b.jpeg
-woman.jpg: woman-77aac16161aebb7856f0730d9795e763.jpg
-woman/index.jpg: woman-77aac16161aebb7856f0730d9795e763.jpg
-zoya_logo.jpg: zoya_logo-2f7a696d4546837f46a90663c4586cc8.jpg
-zoya_logo/index.jpg: zoya_logo-2f7a696d4546837f46a90663c4586cc8.jpg
-zoya_logo_2.png: zoya_logo_2-9792f68eaa0b5de4b000ed4efff2a716.png
-zoya_logo_2/index.png: zoya_logo_2-9792f68eaa0b5de4b000ed4efff2a716.png
 application.js: application-ad9a02783c2d84f3203e1d2e2a3985db.js
 application/index.js: application-ad9a02783c2d84f3203e1d2e2a3985db.js
 ie/PIE.htc: ie/PIE-238c32519ae0fef6fb7b626d9265b85b.htc
@@ -151,8 +119,8 @@ ie/backgroundsize.min.htc: ie/backgroundsize.min-d8e1a903131399c37a3b3869fad25fa
 ie/backgroundsize/index.min.htc: ie/backgroundsize.min-d8e1a903131399c37a3b3869fad25faf.htc
 FontAwesome.otf: FontAwesome-32f043dec1954533e5e731cbd725573f.otf
 FontAwesome/index.otf: FontAwesome-32f043dec1954533e5e731cbd725573f.otf
-application.css: application-f1a148e2a91a56399041a8056941e3fb.css
-application/index.css: application-f1a148e2a91a56399041a8056941e3fb.css
+application.css: application-838f149359a576077a18b1ab249a0b01.css
+application/index.css: application-838f149359a576077a18b1ab249a0b01.css
 fontawesome-webfont.eot: fontawesome-webfont-2a1eb00d733f7b3abcbc26e365801d00.eot
 fontawesome-webfont/index.eot: fontawesome-webfont-2a1eb00d733f7b3abcbc26e365801d00.eot
 fontawesome-webfont.woff: fontawesome-webfont-f2a9004d897733ee518fb3d48f0fbb53.woff
